--- a/src/scss/path-992.scss
+++ b/src/scss/path-992.scss
@@ -1,176 +1,175 @@
 @media (max-width: 992px) {
   
-    /* scale(6) */
+    /* scale(4) */
     .path1._biger {
-        transform: translate(-19%, -15%) scale(6) !important;
+        transform: translate(-19%, -15%) scale(4) !important;
     }
 
     .path2._biger {
-        transform: translate(35%, 31%) scale(6) !important;
+        transform: translate(35%, 31%) scale(4) !important;
     }
 
     .path3._biger {
-        transform: translate(33%, 45%) scale(6) !important;
+        transform: translate(33%, 45%) scale(4) !important;
     }
 
     .path4._biger {
-        transform: translate(-5%, -17%) scale(6) !important;
+        transform: translate(-5%, -17%) scale(4) !important;
     }
 
     .path5._biger {
-        transform: translate(37%, 18%) scale(6) !important;
+        transform: translate(37%, 18%) scale(4) !important;
     }
 
     .path6._biger {
-        transform: translate(35%, 4%) scale(6) !important;
+        transform: translate(35%, 4%) scale(4) !important;
     }
 
     .path7._biger {
-        transform: translate(31%, 19%) scale(6) !important;
+        transform: translate(31%, 19%) scale(4) !important;
     }
 
     .path8._biger {
-        transform: translate(26%, 27%) scale(6) !important;
+        transform: translate(26%, 27%) scale(4) !important;
     }
 
     .path9._biger {
-        transform: translate(37%, 15%) scale(6) !important;
+        transform: translate(37%, 15%) scale(4) !important;
     }
 
     .path10._biger {
-        transform: translate(-7%, -15%) scale(6) !important;
+        transform: translate(-7%, -15%) scale(4) !important;
     }
 
     .path11._biger {
-        transform: translate(-12%, -19%) scale(6) !important;
+        transform: translate(-12%, -19%) scale(4) !important;
     }
 
     .path12._biger {
-        transform: translate(-26%, -22%) scale(6) !important;
+        transform: translate(-26%, -22%) scale(4) !important;
     }
 
     .path13._biger {
-        transform: translate(13%, -10%) scale(6) !important;
+        transform:translate(17%, -14%) scale(5.1) !important;
     }
 
     .path14._biger {
-        transform: translate(20%, -3%) scale(6) !important;
+        transform: translate(18%, -14%) scale(4.5) !important;
     }
 
     .path15._biger {
-        transform: translate(29%, 6%) scale(6) !important;
+        transform: translate(29%, 6%) scale(4) !important;
     }
 
     .path16._biger {
-        transform: translate(30%, 7%) scale(6) !important;
+        transform: translate(30%, 7%) scale(4) !important;
     }
 
     .path17._biger {
-        transform: translate(25%, 3%) scale(6) !important;
+        transform: translate(25%, 3%) scale(4) !important;
     }
 
     .path18._biger {
-        transform: translate(13%, -1%) scale(6) !important;
+        transform: translate(8%, -11%) scale(4) !important;
     }
 
     .path19._biger {
-        /* transform: translate(26%, 36%)   scale(6)!important; */
-        transform: translate(26%, 36%) scale(6) !important;
+        transform: translate(26%, 36%) scale(5) !important;
     }
 
     .path20._biger {
-        transform: translate(32%, 29%) scale(6) !important;
+        transform: translate(32%, 29%) scale(4) !important;
     }
 
     .path21._biger {
-        transform: translate(20%, 12%) scale(6) !important;
+        transform: translate(20%, 12%) scale(4) !important;
     }
 
     .path22._biger {
-        transform: translate(27%, 15%) scale(6) !important;
+        transform: translate(24%, 9%) scale(5) !important;
     }
 
     .path23._biger {
-        transform: translate(13%, 5%) scale(6) !important;
+        transform: translate(10%, 0%) scale(4.5) !important;
     }
 
     .path24._biger {
-        transform: translate(16%, -23%) scale(6) !important;
+        transform: translate(29%, -28%) scale(4.2) !important
     }
 
     .path25._biger {
-        transform: translate(26%, -14%) scale(6) !important;
+        transform: translate(26%, -14%) scale(4) !important;
     }
 
     .path26._biger {
-        transform: translate(43%, -5%) scale(6) !important;
+        transform: translate(43%, -5%) scale(4) !important;
     }
 
     .path27._biger {
-        transform: translate(16%, 18%) scale(6) !important;
+        transform: translate(16%, 18%) scale(4) !important;
     }
 
     .path28._biger {
-        transform: translate(33%, -7%) scale(6) !important;
+        transform: translate(33%, -7%) scale(4) !important;
     }
 
     .path29._biger {
-        transform: translate(41%, 6%) scale(6) !important;
+        transform: translate(41%, 6%) scale(4) !important;
     }
 
     .path30._biger {
-        transform: translate(-26%, -10%) scale(6) !important;
+        transform: translate(-26%, -10%) scale(4) !important;
     }
 
     .path31._biger {
-        transform: translate(6%, 6%) scale(6) !important;
+        transform: translate(6%, 6%) scale(4) !important;
     }
 
     .path32._biger {
-        transform: translate(-16%, -20%) scale(6) !important;
+        transform: translate(-16%, -20%) scale(4) !important;
     }
 
     .path33._biger {
-        transform: translate(-16%, -4%) scale(6) !important;
+        transform: translate(-16%, -4%) scale(4) !important;
     }
 
     .path34._biger {
-        transform: translate(4%, -6%) scale(6) !important;
+        transform: translate(4%, -6%) scale(4) !important;
     }
 
     .path35._biger {
-        transform: translate(-34%, -23%) scale(6) !important;
+        transform: translate(-34%, -23%) scale(4) !important;
     }
 
     .path36._biger {
-        transform: translate(-21%, 1%) scale(6) !important;
+        transform: translate(-21%, 1%) scale(4) !important;
     }
 
     .path37._biger {
-        transform: translate(5%, -17%) scale(6) !important;
+        transform: translate(5%, -17%) scale(4) !important;
     }
 
     .path38._biger {
-        transform: translate(-12%, -13%) scale(6) !important;
+        transform: translate(-12%, -13%) scale(4) !important;
     }
 
     .path39._biger {
-        transform: translate(-14%, -14%) scale(6) !important;
+        transform: translate(-14%, -14%) scale(4) !important;
     }
 
     .path40._biger {
-        transform: translate(8%, -24%) scale(6) !important;
+        transform: translate(8%, -24%) scale(4) !important;
     }
 
     .path41._biger {
-        transform: translate(-20%, -28%) scale(6) !important;
+        transform: translate(-20%, -28%) scale(4) !important;
     }
 
     .path42._biger {
-        transform: translate(36%, 33%) scale(6) !important;
+        transform: translate(36%, 33%) scale(4) !important;
     }
 
     .path43._biger {
-        transform: translate(22%, 24%) scale(6) !important;
+        transform: translate(22%, 24%) scale(4) !important;
     }
 }
