--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -40,33 +40,7 @@ body {
     color: #0079c2;
 }
 
-.back {
-    position: absolute;
-    left: -85px;
-    top: 16%;
-    img {
-        width: 40px;
-        pointer-events: none;
-    }
-}
 
-._dotted-title {
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    img {
-        width: 44px;
-        margin-right: 28px;
-    }
-    h2 {
-        margin-right: 22px;
-    }
-    span {
-        border-bottom: 1px dashed #0079c2;
-        display: block;
-        flex: 1 1 auto;
-    }
-}
 
 .header {
     position: absolute;
@@ -77,7 +51,7 @@ body {
 
     &__container {
         @media (max-width: 992px) {
-            padding: 0;
+            padding: 0!important;
         }
     }
 
@@ -110,6 +84,7 @@ body {
         border-radius: 8px;
         cursor: pointer;
         margin-left: 14px;
+        top: 3px;
 
         display: none;
 
@@ -133,8 +108,7 @@ body {
             transition: all 0.3s ease 0s;
             top: 0;
             height: 100%;
-            width: 100%;
-            max-width: 375px;
+            width: 50%;
             background: #0079c2;
             border-radius: 0 0 10px 0;
             padding: 15px 0 25px 0;
@@ -160,7 +134,7 @@ body {
             border: 0.5px solid rgba(255, 255, 255, 0.2);
             backdrop-filter: blur(4px);
             border-radius: 8px;
-            margin-left: 23px;
+            margin-left: 34px;
             margin-bottom: 66px;
             cursor: pointer;
 
@@ -306,10 +280,10 @@ body {
 }
 
 .logo-sovet {
-    @include adaptive-value("height", 121, 57, 1);
+    @include adaptive-value("height", 103, 57, 1);
 }
 .logo-main {
-    @include adaptive-value("height", 121, 57, 1);
+    @include adaptive-value("height", 103, 57, 1);
 }
 .page {
 }
@@ -318,6 +292,7 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     @include adaptive-value("padding-bottom", 62, 29, 1);
+    @include adaptive-value("padding-top", 123, 57, 1);
 
     // .main__body
 
@@ -826,7 +801,6 @@ body {
 }
 
 .gallery {
-    display: none;
     // .gallery__container
 
     &__container {
@@ -921,515 +895,11 @@ body {
     }
 }
 
-.rodnik-main {
-    margin-bottom: 104px;
-    padding-bottom: 0;
-    // .rodnik-main__container
 
-    &__container {
-    }
 
-    // .rodnik-main__body
 
-    &__body {
-        position: relative;
-    }
 
-    // .rodnik-main__title
-
-    &__title {
-        font-style: normal;
-        font-weight: 400;
-        font-size: 65px;
-        line-height: 1.22em;
-        color: #ffffff;
-        margin-bottom: 76px;
-
-        mark {
-            font-weight: 800;
-            background-color: unset;
-            color: inherit;
-        }
-    }
-
-    // .rodnik-main__adress
-
-    &__adress {
-        background: #ffffff;
-        backdrop-filter: blur(20px);
-        border-radius: 15px;
-        display: flex;
-        align-items: center;
-        justify-content: flex-start;
-        font-weight: 400;
-        font-size: 20px;
-        line-height: 1.2em;
-        color: #003251;
-        padding: 15px 25px;
-        margin-bottom: 33px;
-        max-width: 620px;
-
-        img {
-            margin-right: 10px;
-        }
-
-        mark {
-            font-weight: 800;
-            background-color: unset;
-            color: #0079c2;
-        }
-    }
-
-    // .rodnik-main__bottom
-
-    &__bottom {
-        display: flex;
-        align-items: center;
-        justify-content: flex-start;
-        padding-bottom: 321px;
-    }
-
-    // .rodnik-main__desrc
-
-    &__desrc {
-        // .rodnik-main__desrc-time
-
-        &-time {
-            background: rgba(255, 255, 255, 0.2);
-            backdrop-filter: blur(20px);
-            border-radius: 15px;
-            margin-right: 36px;
-            font-weight: 400;
-            font-size: 20px;
-            line-height: 1.2em;
-            color: #ffffff;
-            padding: 15px 25px;
-
-            mark {
-                font-weight: 600;
-                background-color: unset;
-                color: inherit;
-            }
-        }
-
-        // .rodnik-main__desrc-descr
-
-        &-descr {
-            background: rgba(255, 255, 255, 0.2);
-            backdrop-filter: blur(20px);
-            border-radius: 15px;
-            font-weight: 400;
-            font-size: 20px;
-            line-height: 1.2em;
-            color: #ffffff;
-            padding: 15px 25px;
-        }
-    }
-}
-
-.rodnik {
-    margin-bottom: -162px;
-
-    // .rodnik__container
-
-    &__container {
-    }
-
-    // .rodnik__body
-
-    &__body {
-        display: flex;
-        justify-content: space-between;
-        align-items: flex-start;
-    }
-
-    // .rodnik__info
-
-    &__info {
-        position: relative;
-        top: -278px;
-        background: #ffffff;
-        box-shadow: 0px 0px 15px rgba(0, 51, 82, 0.12);
-        border-radius: 20px;
-        padding: 55px 65px 35px 29px;
-        max-width: 956px;
-
-        // .rodnik__info-item
-
-        &-item {
-            margin-bottom: 46px;
-
-            // .rodnik__info-item-title
-
-            &-title {
-                margin-bottom: 33px;
-
-                h2 {
-                    font-style: normal;
-                    font-weight: 600;
-                    font-size: 36px;
-                    line-height: 1.8em;
-                }
-            }
-
-            // .rodnik__info-item-text
-
-            &-text {
-                font-style: normal;
-                font-weight: 400;
-                font-size: 18px;
-                line-height: 1.18em;
-                color: #003251;
-                ol,
-                li,
-                span {
-                    color: inherit;
-                    font-size: inherit;
-                    font-weight: inherit;
-                    line-height: inherit;
-                }
-            }
-
-            // .rodnik__info-item-coords
-
-            &-coords {
-                display: block;
-                margin-top: 30px;
-                font-style: normal;
-                font-weight: 400;
-                font-size: 18px;
-                line-height: 1.18em;
-                color: #ffffff;
-                background-color: #0079c2;
-                border-radius: 10px;
-                padding: 4px 15px;
-            }
-        }
-    }
-
-    // .rodnik__gallery
-
-    &__gallery {
-        display: flex;
-        flex-direction: column;
-        & > :not(:last-child) {
-            margin-bottom: 107px;
-        }
-        img {
-            max-width: 416px;
-            display: block;
-        }
-    }
-}
-
-.feedback {
-    // .feedback-slide
-
-    &-slide {
-    }
-
-    // .feedback__container
-
-    &__container {
-    }
-
-    // .feedback__body
-
-    &__body {
-        display: flex;
-        align-items: flex-start;
-        justify-content: space-between;
-    }
-
-    // .feedback__slider
-
-    &__slider {
-        margin-right: 107px;
-        // .feedback__slider-title
-
-        &-title {
-            font-style: normal;
-            font-weight: 600;
-            font-size: 42px;
-            line-height: 1.18em;
-            color: #0079c2;
-            margin-bottom: 47px;
-        }
-
-        // .feedback__slider-body
-
-        &-body {
-            // display: flex;
-            // align-items: center;
-            // justify-content: center;
-            // margin-left: -58.5px;
-
-            // min-height: 0;
-            // min-width: 0;
-        }
-
-        // .feedback__slider-next
-
-        &-controlls {
-            display: flex;
-            align-items: center;
-            justify-content: flex-start;
-            margin-top: 25px;
-        }
-
-        // .feedback__slider-pagination
-
-        &-pagination {
-            width: fit-content !important;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            position: static !important;
-            transform: none !important;
-            margin: 0 26px;
-            height: 48px;
-            & > :not(:last-child) {
-                margin-right: 12px !important;
-            }
-
-            span {
-                display: block;
-                font-style: normal;
-                font-weight: 600;
-                font-size: 24px;
-                line-height: 1.2em;
-                height: fit-content;
-                color: #0079c2 !important;
-                background: none !important;
-                position: static !important;
-                transform: scale(1) !important;
-                opacity: 1 !important;
-            }
-        }
-
-        // .feedback__slider-prev
-
-        &-prev {
-            cursor: pointer;
-            flex: 0 0 48px;
-            width: 48px;
-            height: 48px;
-            background: #ffffff;
-            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-            border-radius: 50%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            padding: 0 4px 0 0;
-            img {
-                width: 16.5px;
-                pointer-events: none;
-            }
-        }
-
-        // .feedback__slider-next
-
-        &-next {
-            cursor: pointer;
-            flex: 0 0 48px;
-            width: 48px;
-            height: 48px;
-            background: #ffffff;
-            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-            border-radius: 50%;
-            position: relative;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            img {
-                margin: 0 0 0 4px;
-                width: 16.5px;
-                pointer-events: none;
-                transform: rotate(180deg);
-            }
-        }
-
-        // .feedback__slider-slider
-
-        &-slider {
-            max-width: 694px;
-            height: 516px;
-        }
-
-        // .feedback__slider-wrapper
-
-        &-wrapper {
-        }
-
-        // .feedback__slider-slide
-
-        &-slide {
-        }
-    }
-
-    // .feedback__form
-
-    &__form {
-        // .feedback__form-title
-
-        &-title {
-            font-style: normal;
-            font-weight: 600;
-            font-size: 42px;
-            line-height: 1.18em;
-            color: #0079c2;
-            margin-bottom: 47px;
-        }
-    }
-}
-
-.swiper-grid-column > .swiper-wrapper {
-    flex-direction: unset;
-}
-
-.feedback-slide {
-    max-width: 694px;
-    height: calc((100% - 25px) / 3);
-    // .feedback-slide__body
-
-    &__body {
-        background-color: #ffffff;
-        border: 1px solid rgba(0, 81, 130, 0.3);
-        border-radius: 20px;
-        padding: 14px 32px 27px 29px;
-    }
-
-    // .feedback-slidee__top
-
-    &__top {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-    }
-
-    // .feedback-slide__date
-
-    &__date {
-        font-style: normal;
-        font-weight: 400;
-        font-size: 14px;
-        line-height: 1.2em;
-        color: #bdbfc1;
-        margin-bottom: 10px;
-    }
-
-    // .feedback-slide__rate
-
-    &__rate {
-        img {
-        }
-    }
-
-    // .feedback-slide__title
-
-    &__title {
-        font-style: normal;
-        font-weight: 600;
-        font-size: 24px;
-        line-height: 1.22em;
-        color: #0079c2;
-        margin-bottom: 10px;
-    }
-
-    // .feedback-slide__descr
-
-    &__descr {
-        font-style: normal;
-        font-weight: 400;
-        font-size: 16px;
-        line-height: 1.2em;
-        color: #003251;
-    }
-}
-
-.form {
-    width: 635px;
-    input,
-    textarea {
-        width: 100%;
-        // border: 1px solid rgba(0, 81, 130, 0.3);
-        // border-radius: 10px;
-        font-style: normal;
-        font-weight: 400;
-        font-size: 18px;
-        line-height: 1.18em;
-        color: #0079c2;
-    }
-
-    input {
-        padding: 16px 15px 15px 23px;
-    }
-
-    textarea {
-        padding: 18px 15px 15px 23px;
-        resize: none;
-        max-height: 235px;
-        height: 235px;
-    }
-
-    // .form__ocenka
-
-    &__ocenka {
-        background: #ffffff;
-        box-shadow: 0px 4px 9px rgba(0, 87, 145, 0.15);
-        border-radius: 10px;
-        margin-bottom: 25px;
-        padding: 15px 38px 16px 23px;
-        font-style: normal;
-        font-weight: 400;
-        font-size: 18px;
-        line-height: 1.22em;
-        color: #0079c2;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-
-        span {
-            border: 1px solid rgba(0, 140, 225, 0.1);
-            border-radius: 5px;
-            padding: 5px 12px;
-            display: block;
-            margin-right: 21px;
-        }
-    }
-
-    // .form__message
-
-    &__message {
-        background: #ffffff;
-        box-shadow: 0px 4px 9px rgba(0, 87, 145, 0.15);
-        border-radius: 10px;
-        margin-bottom: 25px;
-    }
-
-    // .form__button
-
-    &__button {
-        button {
-            width: 100%;
-            background: #0079c2;
-            border-radius: 10px;
-            padding: 12px 0;
-            font-style: normal;
-            font-weight: 600;
-            font-size: 24px;
-            line-height: 1.22em;
-            text-align: center;
-            color: #ffffff;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-
-            img {
-                margin: 0 15px;
-            }
-        }
-    }
-}
-
+@import "rodnik_page";
 @import "map";
+
+
